# fraction-bot

./: Cargo.toml
src/: fraction_calc.rs  main.rs
src/commands/: fraction.rs  hello.rs  mod.rs
