[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serenity = { version = "0.12.2", features = [
  "framework",
  "standard_framework",
] }

tokio = { version = "1.21.2", features = [
  "macros",
  "signal",
  "rt-multi-thread",
] }

ask_gemini = "0.1.4"
